--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     min-height: 100%;
     background-attachment: fixed;
 }
+
 .navbar{
     position: sticky;
     top: 0; /* must have position*/
@@ -174,10 +175,34 @@ body{
     background-color: aquamarine;
 }
 
+
 .project-list {
     display: flex;
     justify-content: space-around;
 
+}
+
+.project-list .arrow{
+    height: 40px;
+    width: 5%;
+    pointer-events: all;
+    background-color:#0d1e22;
+    color: aquamarine;
+    padding: 10px 30px;
+    border: 1px solid aquamarine;
+    border-radius: 10px;
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    transition: transform 0.5s ease, color 0.5s ease, background-color 0.5s ease;
+    text-align: left;
+    align-self: center;
+}
+
+.project-list .arrow:hover{
+    color:#0d1e22;
+    background-color: aquamarine;
+    transform: scale(1.2);
 }
 
 .project-list > div{
@@ -194,7 +219,7 @@ body{
 }
 
 .project-list > div img{
-    width: 250px;
+    width: 90%;
     border-radius: 10px;
 }
 
