--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 }
 
 .navbar{
+    height: 5vh;
     position: sticky;
     top: 0; /* must have position*/
     z-index: 1000;
@@ -59,7 +60,8 @@ body{
 }
 
 #about-me{
-    height: auto;
+    position: relative;
+    height: 70vh;
     display: flex;
     flex-direction: row;
     padding: 70px;
@@ -182,29 +184,6 @@ body{
 
 }
 
-.project-list .arrow{
-    height: 40px;
-    width: 5%;
-    pointer-events: all;
-    background-color:#0d1e22;
-    color: aquamarine;
-    padding: 10px 30px;
-    border: 1px solid aquamarine;
-    border-radius: 10px;
-    font-size: 15px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 600;
-    transition: transform 0.5s ease, color 0.5s ease, background-color 0.5s ease;
-    text-align: left;
-    align-self: center;
-}
-
-.project-list .arrow:hover{
-    color:#0d1e22;
-    background-color: aquamarine;
-    transform: scale(1.2);
-}
-
 .project-list > div{
     background-color: rgba(0, 35, 31, 0.625);
     width: 20%;
@@ -246,6 +225,88 @@ body{
     font-size: 30px;
     text-align: center;
 }
+
+#experiences{
+    height: 70vh;
+    background: radial-gradient(circle at center,#1a574d 0%, #0c2322 33%, #020708 100%);
+    background-size: 200% 200%;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 70px;
+    color: white;
+    box-shadow: 0px 0px 5px 0px aquamarine;
+    border-top: 1px solid aquamarine;
+    animation: gradient 30s ease 0s infinite;
+}
+
+#experiences > h1{
+    font-size: 50px;
+    margin-bottom: 50px;
+}
+.experiences-content{
+    display: flex;
+    justify-content: space-between;
+}
+
+.experiences-gallery{
+    height: 50vh;
+    border: 2px solid aquamarine;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 0px aquamarine;
+    background-color: #091b16;
+    width: 100%;
+    margin: 0px 20px;
+    opacity: 1;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 3%;
+    transition: opacity 1s ease;
+}
+
+.experiences-gallery img{
+    margin: 10% 5%;
+    box-sizing: border-box;
+    width: 40%;
+}
+
+.experiences-gallery h1{
+    font-size: 40px;
+    font-weight: 400;
+}
+
+.experiences-text{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: flex-start;
+}
+
+.arrow{
+    margin: 0;
+    height: 40px;
+    width: 5%;
+    pointer-events: all;
+    background-color:#0d1e22;
+    color: aquamarine;
+    padding: 10px;
+    border: 1px solid aquamarine;
+    border-radius: 10px;
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
+    transition: transform 0.5s ease, color 0.5s ease, background-color 0.5s ease;
+    text-align: center;
+    align-self: center;
+}
+
+.arrow:hover{
+    color:#0d1e22;
+    background-color: aquamarine;
+    transform: scale(1.2);
+}
+
+
 /*animations*/
 
 @keyframes fadeIn{
@@ -261,4 +322,10 @@ body{
 @keyframes breatheIn{
     from{opacity: 0; transform: scale(0.6);}
     to{opacity: 1; transform: scale(1);}
+}
+
+@keyframes gradient {
+    0%{background-position: 0% 0%;}
+    50%{background-position: 100% 100%;}
+    100%{background-position: 0% 0%;}
 }
